<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    android:paddingLeft="3dp"
    android:paddingRight="3dp"
    android:paddingTop="10dp"
    android:paddingBottom="@dimen/activity_vertical_margin"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="1dp"
        >

        <TextView
            android:id="@+id/demo_0"
            style="@style/dimensiones"

            android:text="@string/titulo_demografia"
            android:textSize="35sp"
            android:layout_gravity="center"
            android:textColor="@color/palegreen"
            android:textStyle="bold"
            android:gravity="left"
            android:layout_marginTop="30dp"
            />

        <TextView
            android:id="@+id/demo_1"
            style="@style/dimensiones"
            android:text="@string/intro_demografia"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:textColor="@color/gray"
            android:layout_marginTop="20dp"/>

        <ImageView
            style="@style/dimensiones"
            android:src="@drawable/guaini_2"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/demo_2"
            style="@style/dimensiones"
            android:text="@string/intro2_demografia"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:textColor="@color/gray"
            android:layout_marginTop="20dp"/>

        <ImageView
            style="@style/dimensiones"
            android:src="@drawable/guaini_1"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="20dp"/>

        <TextView
            style="@style/dimensiones"
            android:text="@string/Demo1"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:textColor="@color/gray"
            android:layout_marginTop="20dp"/>
        <TextView
            style="@style/dimensiones"
            android:text="@string/Demo2"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:textColor="@color/gray"
            android:layout_marginTop="5dp"/>

        <TextView
            style="@style/dimensiones"
            android:text="@string/Demo4"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:textColor="@color/gray"
            android:layout_marginTop="5dp"/>
        <TextView
            style="@style/dimensiones"
            android:text="@string/Demo5"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:textColor="@color/gray"
            android:layout_marginTop="5dp"/>
        <TextView
            style="@style/dimensiones"
            android:text="@string/Demo6"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:textColor="@color/gray"
            android:layout_marginTop="5dp"/>
        <TextView
            style="@style/dimensiones"
            android:text="@string/Demo7"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:textColor="@color/gray"
            android:layout_marginTop="5dp"/>
        <TextView
            style="@style/dimensiones"
            android:text="@string/Demo8"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:textColor="@color/gray"
            android:layout_marginTop="5dp"/>




        <ImageButton
            android:layout_marginTop="40dp"
            android:id="@+id/Bt_Back"
            style="@style/dimensiones"
            android:src="@drawable/back"
            android:background="@color/white"
            android:layout_gravity="center"

            />


    </LinearLayout>
</ScrollView>